[tool.poetry]
name = "damejidlopy"
version = "0.1.0"
description = ""
authors = ["Daniel Kukucz <daniel@kukucz.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
selenium = "^3.141.0"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
